<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLimit"
    android:paddingHorizontal="15sp"
    android:paddingVertical="20sp"
    tools:context=".LoginAndRegister.Login">

    <TextView
        android:id="@+id/tittleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:fontFamily="sans-serif-black"
        android:text="JTrend"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/backgroundCards"
        app:cardCornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/LoginCard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittleText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/emailInput"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText

                android:inputType="textEmailAddress"
                android:id="@+id/LoginEmail"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginTop="15sp"
                android:backgroundTint="@color/white"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/LoginPassword"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/white"
                android:textColor="@color/white" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/LoginCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        app:cardBackgroundColor="@color/appMainColor"
        app:cardCornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0sp"
            android:backgroundTint="@color/transparent"
            android:padding="0sp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"

            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/RegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>