<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLimit"
    android:paddingHorizontal="15sp"
    android:paddingVertical="20sp"
    tools:context=".Register">

    <TextView
        android:id="@+id/TopText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/FormCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="15sp"
        app:cardBackgroundColor="@color/backgroundCards"
        app:cardCornerRadius="15sp"
        app:layout_constraintBottom_toTopOf="@+id/CardRegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15sp">

            <TextView
                android:layout_marginTop="50sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputDocumento"
                android:text="@string/Document"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                app:cardBackgroundColor="@color/inputColors"
                app:cardCornerRadius="5sp"
                app:cardElevation="4sp">

                <EditText
                    android:id="@+id/inputDocumento"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15sp"
                    android:backgroundTint="@color/transparent"
                    android:inputType="number"
                    android:layout_margin="0sp"
                    android:paddingVertical="0sp"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputNombres"
                android:text="@string/Names"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/inputColors"
                android:layout_marginVertical="10sp"
                app:cardCornerRadius="5sp"
                app:cardElevation="4sp">

                <EditText
                    android:id="@+id/inputNombres"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15sp"
                    android:backgroundTint="@color/transparent"
                    android:inputType="text"
                    android:layout_margin="0sp"
                    android:paddingVertical="0sp"
                    android:textSize="15sp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputApellidos"
                android:text="@string/LastNames"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/inputColors"
                android:layout_marginVertical="10sp"
                app:cardCornerRadius="5sp"
                app:cardElevation="4sp">

                <EditText
                    android:id="@+id/inputApellidos"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15sp"
                    android:backgroundTint="@color/transparent"
                    android:inputType="text"
                    android:layout_margin="0sp"
                    android:paddingVertical="0sp"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputEmail"
                android:text="@string/emailInput"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/inputColors"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                app:cardCornerRadius="5sp"
                app:cardElevation="4sp">

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15sp"
                    android:backgroundTint="@color/transparent"
                    android:inputType="textEmailAddress"
                    android:layout_margin="0sp"
                    android:paddingVertical="0sp"
                    android:textSize="15sp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputPassword"
                android:text="@string/passwordInput"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardBackgroundColor="@color/inputColors"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                app:cardCornerRadius="5sp"

                app:cardElevation="4sp">

                <EditText
                    android:id="@+id/inputPassword"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15sp"
                    android:backgroundTint="@color/transparent"
                    android:inputType="textPassword"
                    android:layout_margin="0sp"
                    android:paddingVertical="0sp"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/inputDate"
                android:text="@string/inputDate"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/inputColors"
                android:layout_marginVertical="10sp"
                app:cardCornerRadius="5sp"
                app:cardElevation="4sp">

                <EditText
                    android:id="@+id/inputDate"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15sp"
                    android:backgroundTint="@color/transparent"
                    android:inputType="date"
                    android:layout_margin="0sp"
                    android:paddingVertical="0sp"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/CardRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/appMainColor"
        app:cardCornerRadius="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FormCard">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:textSize="20sp"
            android:background="@color/transparent"
            android:padding="0sp"
            android:text="@string/RegisterButtons" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>